--- a/base.html
+++ b/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Taxi Rhythm</title>
+  <title>TMT TAXI</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap" rel="stylesheet">
   <style>
@@ -81,9 +81,9 @@
     <div class="container">
         <a class="navbar-brand font-weight-bold" href="./base.html">TMT TAXI</a>
         <div class="ml-auto d-flex align-items-center">
-          <a href="#" class="btn btn-link">Korporativ taksi</a>
-          <a href="#" class="btn btn-link">Shaxsiy hisob</a>
-          <a href="#" class="btn btn-dark">Taksi buyurtma qiling</a>
+          <a href="tel:+998773105555" class="btn btn-link">☎️ (77 310 55 55)</a>
+          <a href="tel:+998952435555" class="btn btn-link">☎️ (95 243 55 55)</a>
+          <a href="https://taxi.yandex.uz/ru_uz/" class="btn btn-dark">Taksi buyurtma qiling</a>
         </div>
     </div>
   </nav>
@@ -92,7 +92,7 @@
     <div class="container">
       <h1>TMT taxi rasmiy sayti</h1>
       <p>Professionalar bilan yo'lda</p>
-      <img src="./eqm5_black.png" alt="Taxi" class="img-fluid my-4">
+      <img src="./1.png" alt="Taxi" class="img-fluid my-4">
     </div>
   </section>
 
@@ -135,21 +135,21 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card p-3">
-            <h5>Biznes</h5>
+            <h5>Kamfort, Kamfort+, Elektro, Biznes</h5>
             <small>Hongqi E-QM5</small>
             <img src="./eqm5_black.png" class="card-img-top mt-2">
           </div>
         </div>
         <div class="col-md-4">
           <div class="card p-3">
-            <h5>Elektro</h5>
+            <h5>Kamfort, Kamfort+, Elektro</h5>
             <small>BYD e2</small>
             <img src="./e2.png" class="card-img-top mt-2">
           </div>
         </div>
         <div class="col-md-4">
           <div class="card p-3">
-            <h5>Konfor+</h5>
+            <h5>Kamfort, Kamfort+</h5>
             <small>JAC j7</small>
             <img src="./jacj7.png" class="card-img-top mt-2">
           </div>
@@ -161,10 +161,22 @@
   <section class="about-section">
     <div class="container">
       <h2 class="text-white">Biz haqimizda</h2>
-      <p>TMT taxi 3 yildan ortiq vaqtdan beri Moskva yo‘lovchi tashish bozorida ishlaydi. Shu vaqt ichida yo‘lovchi va haydovchilarning ishonchi va hurmatiga sazovor bo‘ldik. Buni ko‘plab ijobiy baholar va sharhlar tasdiqlaydi, buning uchun biz barchaga chuqur minnatdormiz.</p>
-      <p>Kompaniyamiz korporativ mijozlarga xizmat ko‘rsatishga ixtisoslashgan bo‘lib, ularga xodimlar va boshqaruvchilarni shahar bo‘ylab tez, qulay va xavfsiz tashishga yordam beradi. Bundan tashqari, biz xususiy mijozlarga xizmat ko‘rsatamiz.</p>
-      <p>TMT taxi haydovchilarni tanlashda professional va qat’iy yondashuvni kafolatlaydi, bu bizga yo‘lovchilarga tinch va qulay sayohatlarni taqdim etish imkonini beradi. Shu bilan birga, biz haydovchilar bilan insoniy munosabatlarni o‘rnatamiz va qulay mehnat va daromad sharoitlarini yaratamiz, bu bizning hamkorligimizni haqiqatan ham o‘zaro manfaatli qiladi. Kompaniyaning haydovchilari havas qilsa arziydigan izchillik bilan shahar tanlovlarida “Eng yaxshi taksi haydovchisi” unvonini sohibi bo‘lishadi va Moskva shahar ma’muriyatining faxriy yorliqlariga ega bo‘lishadi.</p>
-      <p>TMT taxi Moskvadagi eng yirik taksi kompaniyalaridan biri bo‘lib, har bir mijoz, haydovchi va xodimni qadrlaydi.</p>
+      🟡 Biz haqimizda — TMT Taxi<br>
+<br>🚖 TMT Taxi — bu shunchaki taksi emas, bu ishonchli hamroh, professional haydovchilar jamoasi va yuqori darajadagi xizmat madaniyatidir.
+
+<br><br>Biz Moskva shahrida 3 yildan ortiq vaqt davomida faoliyat yuritib, minglab yo‘lovchilarning ishonchi va hurmatiga sazovor bo‘ldik. Har bir ijobiy sharh, har bir qayta murojaat bizning eng katta mukofotimiz!
+
+<br><br>🌆 Korporativ mijozlar uchun — tez, qulay va xavfsiz tashish xizmati. Ishchilar va boshqaruvchilarni shaharning istalgan nuqtasiga o‘z vaqtida yetkazamiz.
+
+<br><br>👨‍👩‍👧 Xususiy mijozlar uchun — yuqori xizmat darajasi, tajribali haydovchilar va qulay avtomobillar. Har bir sayohat – yoqimli taassurot!
+
+<br><br>👔 Bizning jamoamiz — bu faqatgina haydovchilar emas, balki o‘z ishini mehr bilan bajaradigan haqiqiy mutaxassislar. TMT Taxi haydovchilari doimiy ravishda “Eng yaxshi taksi haydovchisi” kabi faxriy unvonlarni qo‘lga kiritishadi va shahar ma’muriyatidan mukofotlarga loyiq topilishadi.
+
+<br><br>❤️ Biz haydovchilarimizni qadrlaymiz. Ular uchun qulay ish sharoiti, barqaror daromad va insoniy munosabatni ta’minlaymiz. Shuning uchun ham bizda ishlash — nafaqat foydali, balki yoqimli hamdir.
+
+<br><br>📈 Bugungi kunda TMT TAXI — bu O‘zbekistonda tez rivojlanayotgan, mijoz va haydovchilar ishonchini qozongan taksi xizmatidir. Biz har doim sifat va ishonchlilik tarafdorimiz!
+
+
 
       <div class="stats">
         <div class="stat-box">
