--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Такси Ритм</title>
+  <title>TMT TAXI</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
     <style>
@@ -93,9 +93,9 @@
     <div class="container">
         <a class="navbar-brand font-weight-bold" href="./base.html">TMT TAXI</a>
         <div class="ml-auto d-flex align-items-center">
-          <a href="#" class="btn btn-link">Korporativ taksi</a>
-          <a href="#" class="btn btn-link">Shaxsiy hisob</a>
-          <a href="#" class="btn btn-dark">Taksi buyurtma qiling</a>
+          <a href="tel:+998773105555" class="btn btn-link">☎️ (77 310 55 55)</a>
+          <a href="tel:+998952435555" class="btn btn-link">☎️ (95 243 55 55)</a>
+          <a href="https://taxi.yandex.uz/ru_uz/" class="btn btn-dark">Taksi buyurtma qiling</a>
         </div>
     </div>
   </nav>
@@ -106,9 +106,12 @@
 
       <!-- Left: Text section -->
       <div class="col-md-6 d-flex flex-column justify-content-center align-items-start p-5">
-        <h1 class="display-4 fw-bold">avtomobil ijarasi ish uchun ichida taksida moskva</h1>
-        <p class="fs-5 mt-4">TMT taxi - nomi va obro'siga ega bo'lgan taksi kompaniyasida pul ishlang</p>
-        <a href="#" class="btn btn-danger btn-lg mt-4 px-5 py-3">Haydovchi bo'lish</a>
+        <h1 class="display-4 fw-bold">Avtomobil ijarasi — ish uchun tayyor!</h1>
+        <p class="fs-5 mt-4">🚖 Ish boshlamoqchimisiz? Endi O‘zbekistonda avtomobil topish va halol pul ishlash yanada oson!<br>
+            TMT TAXI — ishonchli nom va obro‘ga ega taksi kompaniyasi! Biz bilan siz:
+        </p>
+
+        <a href="https://t.me/Tashmedia_trans" class="btn btn-danger btn-lg mt-4 px-5 py-3">Haydovchi bo'lish</a>
       </div>
 
       <!-- Right: Image slider section -->
@@ -176,8 +179,8 @@
           <span class="text-muted">03</span>
         </div>
         <hr>
-        <h5 class="fw-bold">Har olti oyda bir bonus</h5>
-        <p>6 kunlik ijara 1 kun bepul</p>
+        <h5 class="fw-bold">Bonus tizimi</h5>
+        <p>Har 6 kunlik ijara uchun 1 kun BEPUL!</p>
       </div>
 
       <div class="col-md-3 mb-4">
@@ -186,8 +189,8 @@
           <span class="text-muted">04</span>
         </div>
         <hr>
-        <h5 class="fw-bold">O‘rtacha hisob 448 000 so'm</h5>
-        <p>Bizning arizamizda</p>
+        <h5 class="fw-bold">O‘rtacha daromad: 600 000 so‘m</h5>
+        <p>Bizning haydovchilarimiz kuniga o‘rtacha 448 000 so‘m ishlab topmoqda.</p>
       </div>
     </div>
   </div>
@@ -195,7 +198,7 @@
 <!-- Sizning mashinangiz bo‘limi -->
 <section class="py-5 bg-white">
   <div class="container">
-    <h1 class="display-4 fw-bold mb-4">sizning mashinangiz <span class="text-muted fs-1">18</span></h1>
+    <h1 class="display-4 fw-bold mb-4">sizning mashinangiz</h1>
 
     <!-- Kategoriyalar -->
     <div class="d-flex gap-5 mb-4">
@@ -208,7 +211,7 @@
 
       <!-- Card 2 -->
       <div class="col">
-        <div class="card h-100 text-center">
+        <div class="card h-100 text-center" style="border: 1px solid lightgray;">
           <div class="card-body">
             <p class="text-muted small">Biznes</p>
             <p class="text-muted small">JADVAL 6/1</p>
@@ -218,10 +221,43 @@
           <img src="./eqm5_black.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
         </div>
       </div>
+      <div class="col">
+        <div class="card h-100 text-center" style="border: 1px solid lightgray;">
+          <div class="card-body">
+            <p class="text-muted small">Elekto</p>
+            <p class="text-muted small">JADVAL 6/1</p>
+            <h5 class="card-title fw-bold">BVD E2</h5>
+            <p class="mb-2">Kuniga 482 000 so'm</p>
+          </div>
+          <img src="./byde2.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 text-center" style="border: 1px solid lightgray;">
+          <div class="card-body">
+            <p class="text-muted small">Camkort</p>
+            <p class="text-muted small">JADVAL 6/1</p>
+            <h5 class="card-title fw-bold">Cobalt</h5>
+            <p class="mb-2">Kuniga 386 000 so'm</p>
+          </div>
+          <img src="./cobalt.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 text-center" style="border: 1px solid lightgray;">
+          <div class="card-body">
+            <p class="text-muted small">Kamfort +</p>
+            <p class="text-muted small">JADVAL 6/1</p>
+            <h5 class="card-title fw-bold">Malubi</h5>
+            <p class="mb-2">Kuniga 412 000 so'm</p>
+          </div>
+          <img src="./malubi.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
+        </div>
+      </div>
 
       <!-- Card 3 -->
       <div class="col">
-        <div class="h-100 text-center card">
+        <div class="card h-100 text-center" style="border: 1px solid lightgray;">
           <div class="card-body">
             <p class="text-muted small">kamfort +</p>
             <p class="text-muted small">JADVAL 6/1</p>
@@ -229,6 +265,17 @@
             <p class="mb-2">Kuniga 485 000 so'm</p>
           </div>
           <img src="./jacj7.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 text-center" style="border: 1px solid lightgray;">
+          <div class="card-body">
+            <p class="text-muted small">Camfort</p>
+            <p class="text-muted small">JADVAL 6/1</p>
+            <h5 class="card-title fw-bold">Jentra</h5>
+            <p class="mb-2">Kuniga 386 0000 so'm</p>
+          </div>
+          <img src="./jentra.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
         </div>
       </div>
 
@@ -249,6 +296,17 @@
               NEGA BU<br>BIZ BILAN FOYDALI
             </div>
           </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100 text-center" style="border: 1px solid lightgray;">
+          <div class="card-body">
+            <p class="text-muted small">Biznes</p>
+            <p class="text-muted small">JADVAL 6/1</p>
+            <h5 class="card-title fw-bold">BYD chazor</h5>
+            <p class="mb-2">Kuniga 532 000 so'm</p>
+          </div>
+          <img src="./chazor.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
         </div>
       </div>
 
@@ -282,11 +340,13 @@
             <img src="./yandex_go.svg" class="img-fluid rounded-3" alt="Yandex Icon" style="width: 60px;">
           </div>
           <div class="col-md-11">
-            <h5><span class="text-danger fw-bold">Sertifikatlangan</span> Yandex.Taksi parkidan avtomobillar</h5>
+            <h5><span class="text-danger fw-bold">🚖 Sertifikatlangan Yandex.</span>Taxi Park — TMT TAXI bilan ishlash imkoniyati!</h5>
             <ul class="mt-3">
-              <li>Yandex.Taxi komissiyasi + 3 % TMT taxi komissiyasi</li>
-              <li>Tanlash uchun markali avtomobillar</li>
-              <li>Yandex-da ishlash va qo'llab-quvvatlash muammolarini hal qilishda bepul yordam</li>
+              <li>✅ Sertifikatlangan Yandex.Taxi parkidan avtomobillar — hujjatlar tayyor, texnik ko‘rikdan o‘tgan, ishga tayyor mashinalar!</li>
+              <li>💸 Komissiya: Yandex + 3% TMT TAXI — ortiqcha xarajatlarsiz, shaffof va tushunarli hisob-kitob.</li>
+              <li>🚘 Tanlash uchun markali avtomobillar — sizga mos bo‘lgan avtomobilni tanlang va ishni boshlang!</li>
+              <li>🛠️ Yandex bilan ishlashdagi muammolar bo‘yicha bepul yordam — biz sizga har doim yelkadosh bo‘lamiz!</li>
+              <li>📈 TMT TAXI — ishonchli hamkorlik, doimiy qo‘llab-quvvatlash va barqaror daromad kafolati!</li>
             </ul>
           </div>
         </div>
@@ -299,11 +359,11 @@
             <img src="./taxi_ritm.svg" class="img-fluid rounded-3" alt="App Icon" style="width: 60px;">
           </div>
           <div class="col-md-11">
-            <h5 class="fw-bold">Bizning arizamizdagi bitta buyurtmaning o'rtacha miqdori 45 000 so'm</h5>
+            <h5 class="fw-bold">📊 TMT TAXI bilan ishlash — raqamlarda aniq!</h5>
             <ul class="mt-3">
-              <li>Bizning arizamizdagi bitta buyurtmaning o'rtacha miqdori 45 000 so'm</li>
-              <li>Etarli yo'lovchilar;</li>
-              <li>TMT taxi komissiyasi 18%</li>
+              <li>💸 O‘rtacha buyurtma narxi: 45 000 so‘m Har bir buyurtma orqali barqaror daromad — kuniga bir nechta buyurtma = yaxshi foyda!</li>
+              <li>🚖 Etarli yo‘lovchilar Bizning tizimda doimiy buyurtmalar bor — bekorchilik yo‘q!</li>
+              <li>🧾 TMT TAXI komissiyasi — atigi 3% Shaffof va tushunarli hisob-kitob. Ortig‘i yo‘q, yashirin to‘lovlar yo‘q!</li>
             </ul>
           </div>
         </div>
@@ -315,7 +375,7 @@
 <!-- Taksi uchun avtomobil ijarasi shartlari -->
 <section class="py-5">
   <div class="container">
-    <h1 class="display-5 fw-bold text-center mb-5">taksi uchun avtomobil ijarasi shartlari</h1>
+    <h1 class="display-5 fw-bold text-center mb-5">🚗 Taksi uchun avtomobil ijarasi — TMT TAXI bilan qulay shartlarda!</h1>
     <div class="row">
 
       <!-- Haydovchi talablari -->
@@ -323,14 +383,14 @@
         <div class="mb-3">
           <span style="font-size: 1.5rem;">📅</span>
         </div>
-        <h5 class="fw-bold mb-3">Haydovchilar uchun talablar</h5>
+        <h5 class="fw-bold mb-3">Haydovchilar uchun talablar:</h5>
         <ul class="list-unstyled">
-          <li class="mb-2">• Yoshi 23 yoshdan</li>
-          <li class="mb-2 ">• O'zbekiston fuqaroligi</li>
-          <li class="mb-2 ">• O'zbek tilini suhbat darajasida bilish</li>
-          <li class="mb-2 ">• Haydovchilik tajribasi 3 yil</li>
+          <li class="mb-2">• ✅ 23 yoshdan katta bo‘lish</li>
+          <li class="mb-2 ">• ✅ O‘zbekiston fuqaroligi</li>
+          <li class="mb-2 ">• ✅ O‘zbek tilini suhbat darajasida bilish</li>
+          <li class="mb-2 ">• ✅ Kamida 3 yillik haydovchilik tajribasi</li>
         </ul>
-        <a href="#" class="btn btn-warning fw-bold mt-4 px-5 py-3">• HAYDOVCHI BO'L</a>
+        <a href="https://t.me/Tashmedia_trans" class="btn btn-warning fw-bold mt-4 px-5 py-3">• HAYDOVCHI BO'L</a>
       </div>
 
       <!-- Foydalanish shartlari -->
@@ -338,17 +398,15 @@
         <div class="mb-3">
           <span style="font-size: 1.5rem;">🎥</span>
         </div>
-        <h5 class="fw-bold mb-3">Foydalanish shartlari</h5>
+        <h5 class="fw-bold mb-3">Foydalanish shartlari:</h5>
         <ul class="list-unstyled">
-          <li class="mb-2 ">• Litsenziya bilan</li>
-          <li class="mb-2 ">• Garov yo‘q</li>
-          <li class="mb-2 ">• Qaytariladigan kafolatli depozit</li>
-          <li class="mb-2 ">• Bir kundan boshlab ijara</li>
-          <li class="mb-2 ">• Kilometrga cheklovlar yo‘q</li>
-          <li class="mb-2 ">• Komissiyasiz kunlik to‘lovlar</li>
-          <li class="mb-2 ">• Uzluksiz ijaraning har ettinchi kuni bepul</li>
-          <li class="mb-2 ">• Shinalarga texnik xizmat ko‘rsatish, almashtirish va saqlash, ta’mirlash, avtomashinalarni majburiy sug‘urta qilish va transport soliqlari bizning hisobimizdan</li>
-          <li class="mb-2 ">• TMT taxi parkida balansni to‘ldirish komissiyasiz, boshqa hollarda 0% bonus</li>
+          <li class="mb-2 ">• ✅ Litsenziya bilan ishlash</li>
+          <li class="mb-2 ">• ✅ Garov yo‘q</li>
+          <li class="mb-2 ">• ✅ 1 kundan boshlab avtomobil ijarasi</li>
+          <li class="mb-2 ">• ✅ Kilometrga hech qanday cheklov yo‘q</li>
+          <li class="mb-2 ">• ✅ Komissiyasiz kundalik to‘lovlar</li>
+          <li class="mb-2 ">• ✅ Har 7-kuni — ijara bepul</li>
+          <li class="mb-2 ">• ✅ Shinalar, ta’mirlash, saqlash, texnik xizmat, sug‘urta va transport solig‘i — bularning barchasi TMT TAXI hisobidan</li>
         </ul>
       </div>
 
@@ -384,7 +442,7 @@
           <button class="btn btn-outline-secondary selector-btn" data-value="12">12</button>
         </div>
 
-        <a href="#" class="btn btn-warning fw-bold px-4 py-3 mt-3">• AVTOMOBIL IJARASI</a>
+        <a href="https://t.me/Tashmedia_trans" class="btn btn-warning fw-bold px-4 py-3 mt-3">• AVTOMOBIL IJARASI</a>
       </div>
 
       <!-- Natija qismi -->
