--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Taxi Ritm</title>
+  <title>TMT TAXI</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -133,24 +133,24 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light">
-  <div class="container">
-    <a class="navbar-brand fw-bold" href="./base.html">TMT TAXI</a>
-    <div class="ms-auto d-flex align-items-center gap-3">
-      <a href="#" class="btn btn-link">Korporativ taksi</a>
-      <a href="#" class="btn btn-link">Shaxsiy hisob</a>
-      <a href="#" class="btn btn-dark">Taksi buyurtma qiling</a>
+    <div class="container">
+        <a class="navbar-brand font-weight-bold" href="./base.html">TMT TAXI</a>
+        <div class="ml-auto d-flex align-items-center">
+          <a href="tel:+998773105555" class="btn btn-link">☎️ (77 310 55 55)</a>
+          <a href="tel:+998952435555" class="btn btn-link">☎️ (95 243 55 55)</a>
+          <a href="https://taxi.yandex.uz/ru_uz/" class="btn btn-dark">Taksi buyurtma qiling</a>
+        </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 <!-- Hero section -->
 <div class="hero-section">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <h1 class="display-4 fw-bold">Avtomobil ijarasi taksi ostida to'lov bilan</h1>
-        <p class="fs-5 mt-3">TMT taxi bilan shaxsiy avtomobilingiz egasiga aylaning!</p>
-        <a href="#" class="btn btn-danger btn-lg mt-3">Haydovchi bo'lish</a>
+        <h1 class="display-4 fw-bold">🚘 Avtomobil ijarasi — to‘lov bilan sizniki!</h1>
+        <p class="fs-5 mt-3">📢 TMT TAXI sizga imkon yaratadi — ishlang, to‘lang, va oxirida mashina sizniki bo‘ladi!</p>
+        <a href="https://t.me/Tashmedia_trans" class="btn btn-danger btn-lg mt-3">Haydovchi bo'lish</a>
       </div>
       <div class="col-md-6">
         <img src="photo_taxi.jpg" alt="Taxi" class="img-fluid rounded">
@@ -164,12 +164,12 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-7">
-        <h1 class="fw-bold mb-4">Biznikilar nima deydi haydovchilar</h1>
+        <h1 class="fw-bold mb-4">⭐ Biznikilar nima deydi?</h1>
         <div class="d-flex align-items-start">
           <div class="quote-number me-4" id="slide-index">1</div>
           <div>
             <p class="fs-5" id="slide-text">
-              "Men yarim kunlik ish uchun taksi haydovchisi bo'lib ishlash uchun keldim. Bir oydan keyin mashina sotib oldim."
+              💬 "Men yarim kunlik ish uchun taksi haydovchisi bo‘lib ishlashga keldim. Oradan atigi bir oy o‘tib, o‘zimga avtomobil sotib oldim. Bu imkoniyat uchun TMT TAXI jamoasiga katta rahmat!"
             </p>
             <p class="text-muted" id="slide-name">Golbenko Yuliya</p>
           </div>
@@ -191,33 +191,43 @@
 
 <!-- Accordion -->
 <div class="container my-5">
-  <h1 class="mb-4">Haydovchilar uchun ma'lumot</h1>
+  <h1 class="mb-4">📘 Haydovchilar uchun ma’lumot</h1>
   <div class="accordion">
     <div class="accordion-item">
       <div class="accordion-header">
-        <span>Sotib olish imkoniyati bilan mashinani qanday ijaraga olish mumkin?</span>
+        <span>❓ Sotib olish imkoniyati bilan mashinani qanday ijaraga olish mumkin?</span>
         <span class="accordion-icon">+</span>
       </div>
       <div class="accordion-content">
-        Mashinani ijara asosida ishlatib, keyinchalik to‘lovlar orqali sotib olish imkoniyati mavjud.
+        💬 Siz mashinani TMT TAXI orqali ijaraga olasiz, va kunlik/oylik to‘lovlar orqali uni asta-sekin to‘lab borasiz. To‘lovlar tugagach — mashina sizning nomingizga rasmiylashtiriladi! Bu — mashinaga ega bo‘lishning eng oson va halol yo‘li!
       </div>
     </div>
     <div class="accordion-item">
       <div class="accordion-header">
-        <span>Qaysi foydaliroq: kredit yoki sotib olish?</span>
+        <span>❓ Qaysi foydaliroq: kreditmi yoki sotib olish?</span>
         <span class="accordion-icon">+</span>
       </div>
       <div class="accordion-content">
-        Kredit orqali mashina tezroq sizniki bo‘ladi, lekin foiz to‘lovlari yuqori bo‘ladi. Ijara esa arzonroq boshlanadi.
+        💬 Kreditda ko‘pincha bank bilan ishlash, garov va yuqori foizlar bo‘ladi. TMT TAXI orqali sotib olish asosidagi ijara esa:<br>
+        ✅ Oddiy va tez jarayon<br>
+        ✅ Hech qanday garov yo‘q<br>
+        ✅ Qulay to‘lovlar<br>
+        ✅ Tushunarli va shaffof shartlar<br>
+        Yakunida siz mashinaning egasiga aylanasiz!<br>
       </div>
     </div>
     <div class="accordion-item">
       <div class="accordion-header">
-        <span>Haydovchilar uchun qanday talablar mavjud?</span>
+        <span>❓ Haydovchilar uchun qanday talablar mavjud?</span>
         <span class="accordion-icon">+</span>
       </div>
       <div class="accordion-content">
-        Yoshi 23+, o'zbek tilini bilish, 3 yillik tajriba, O'zbekiston fuqaroligi.
+        💬 TMT TAXI haydovchi bo‘lish uchun sizdan quyidagilar talab qilinadi:<br>
+        ✅ 23 yoshdan katta bo‘lish<br>
+        ✅ O‘zbekiston fuqaroligi<br>
+        ✅ O‘zbek tilini suhbat darajasida bilish<br>
+        ✅ Kamida 3 yillik haydovchilik tajribasi<br>
+        ✅ Litsenziya bo‘lishi (yoki olishga tayyorlik)<br>
       </div>
     </div>
   </div>
@@ -229,9 +239,8 @@
     <div class="row align-items-center">
       <div class="col-md-6">
         <div class="join-text">
-          <h1>qo‘shilish<br>dasturga<br>to‘lov</h1>
+          <h1>🚀 Dasturga qo‘shiling — ishni bugun boshlang!</h1>
           <p>So‘rov qoldiring va biz siz bilan bog‘lanamiz</p>
-          <a href="#" class="join-btn">KONSULTATSIYA OLING</a>
         </div>
       </div>
       <div class="col-md-6 text-center">
@@ -248,17 +257,13 @@
       <!-- Chap: Sarlavha -->
       <div class="col-md-6 mb-4 mb-md-0">
         <h1 class="display-4 fw-bold text-capitalize">
-          sotib olish shartlari<br>
-          taksi uchun<br>
-          mashina
+          🚖 Taksi uchun avtomobil sotib olish shartlari
         </h1>
       </div>
 
       <!-- O‘ng: Matn -->
       <div class="col-md-6">
-        <p class="lead">
-          Har bir aniq mashinaning o‘ziga xos sotib olish shartlari bor, shuning uchun biz barcha shartlarni to‘g‘ridan-to‘g‘ri parklarimiz bilan aniqlab olishingizni tavsiya qilamiz.
-        </p>
+        <p class="lead">TMT TAXI orqali avtomobil sotib olish — bu oson, tushunarli va insoniy yondashuv asosidagi imkoniyat</p>
       </div>
 
     </div>
@@ -272,31 +277,27 @@
       <!-- Haydovchilar uchun talablar -->
       <div class="col-md-6">
         <div class="text-start">
-          <h1 class="mt-3 mb-4 fw-bold">Haydovchilar uchun talablar</h1>
+          <h1 class="mt-3 mb-4 fw-bold">👤 Haydovchilar uchun talablar:</h1>
           <ul class="list-unstyled">
-            <li class="mb-2 ">• Yoshi 23 yoshdan</li>
-            <li class="mb-2 ">• O'zbekiston  fuqaroligi</li>
-            <li class="mb-2 ">• O'zbek tilini suxbat darajasida bilish</li>
-            <li class="mb-2 ">• Haydovchilik tajribasi 3 yildan</li>
+            <li class="mb-2 ">• ✅ Yoshi — 23 yoshdan katta</li>
+            <li class="mb-2 ">• ✅ O‘zbekiston fuqaroligi</li>
+            <li class="mb-2 ">• ✅ O‘zbek tilini suhbat darajasida bilish</li>
+            <li class="mb-2 ">• ✅ 3 yillik haydovchilik tajribasi</li>
           </ul>
         </div>
-        <a href="#" class="btn btn-warning mt-4 px-4 py-2 fw-bold">● KONSULTATSIYA OLING</a>
+        <a href="https://t.me/Tashmedia_trans" class="btn btn-warning mt-4 px-4 py-2 fw-bold">● Ariza qoldirish</a>
       </div>
 
       <!-- Foydalanish shartlari -->
       <div class="col-md-6">
         <div class="text-start">
-          <h1 class="mt-3 mb-4 fw-bold">Foydalanish shartlari</h1>
+          <h1 class="mt-3 mb-4 fw-bold">🛠️ Foydalanish va sotib olish shartlari:</h1>
           <ul class="list-unstyled">
-            <li class="mb-2 ">• Avtomobilning yoshiga, jadvaliga, shartlarga bog‘liq</li>
-            <li class="mb-2 ">• To‘lov muddati 1 yildan 5 yilgacha</li>
-            <li class="mb-2 ">• Har 7-kun bepul ijarasi</li>
-            <li class="mb-2 ">• Har olti oyda 6 kunlik bepul ijarasi</li>
-            <li class="mb-2 ">• 2–4 haftalik ijaradan keyin sotib olish mumkin</li>
-            <li class="mb-2 ">• Yandex.Taxi, TMT TAXI va boshqalarni ulash</li>
-            <li class="mb-2 ">• Buyurtmalar uchun rejalar yo‘q</li>
-            <li class="mb-2 ">• Haydovchi bilan insoniy munosabatlar</li>
-            <li class="mb-2 ">• Komissiyasiz kunlik to‘lovlar</li>
+            <li class="mb-2 ">• 🚘 Avtomobilning yoshiga, ish jadvaliga va holatiga qarab shartlar belgilanadi</li>
+            <li class="mb-2 ">• 📆 To‘lov muddati: 1 yildan 5 yilgacha</li>
+            <li class="mb-2 ">• 🎁 Har 7-kunda 1 kun ijarasi bepul</li>
+            <li class="mb-2 ">• 🎉 Har 6 oyda 6 kunlik bonus — bepul foydalanish</li>
+            <li class="mb-2 ">• 🔑 2–4 haftalik ijaradan so‘ng mashinani sotib olish imkoniyati mavjud</li>
           </ul>
         </div>
       </div>
