--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Такси Ритм</title>
+  <title>TMT TAXI</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
     <style>
@@ -93,9 +93,9 @@
     <div class="container">
         <a class="navbar-brand font-weight-bold" href="./base.html">TMT TAXI</a>
         <div class="ml-auto d-flex align-items-center">
-          <a href="#" class="btn btn-link">Korporativ taksi</a>
-          <a href="#" class="btn btn-link">Shaxsiy hisob</a>
-          <a href="#" class="btn btn-dark">Taksi buyurtma qiling</a>
+          <a href="tel:+998773105555" class="btn btn-link">☎️ (77 310 55 55)</a>
+          <a href="tel:+998952435555" class="btn btn-link">☎️ (95 243 55 55)</a>
+          <a href="https://taxi.yandex.uz/ru_uz/" class="btn btn-dark">Taksi buyurtma qiling</a>
         </div>
     </div>
   </nav>
@@ -105,12 +105,8 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <h1 class="display-4 fw-bold">ulanish taksiga</h1>
-        <p class="fs-5 mt-3">Buyurtmalarning qo'shimcha manbai (korporativ mijozlar)</br>
-                            Birinchi oyda komissiya 10% (keshbek tufayli)</br>
-                            O'rtacha hisobi yuqori bo'lgan buyurtmalar - 200 000 so'm + tejamkor</br>
-                            B nuqtasi darhol ko'rinadi</p>
-        <a href="#" class="btn btn-danger btn-lg mt-3">Haydovchi bo'lish</a>
+        <h1 class="display-4 fw-bold">🚕 Taksiga ulaning — daromadni oshiring!</h1>
+        <p class="fs-5 mt-3">TMT TAXI orqali siz nafaqat ishlaysiz, balki ko‘proq daromad topasiz! Bizning platformamiz orqali ulanish sizga qo‘shimcha buyurtmalar, bonuslar va ko‘proq erkinlik beradi.
       </div>
       <div class="col-md-6">
         <img src="photo_taxi.jpg" alt="Taxi" class="img-fluid rounded">
@@ -126,11 +122,10 @@
 
       <!-- Chap qism: Matn -->
       <div class="col-md-6 mb-4 mb-md-0">
-        <h1 class="fw-bold display-5">shaxsiy mobil ilovasi<br>haydovchilar uchun</h1>
+        <h1 class="fw-bold display-5">📱 Shaxsiy mobil ilova — haydovchilar uchun qulaylik!</h1>
         <p class="fs-5 mt-3">
-          TMT taxida haydovchilarimiz uchun <span class="text-danger fw-bold">mobil ilova ishlab chiqildi</span>
+          🚖 TMT TAXI endi o‘zining haydovchilariga mo‘ljallangan maxsus mobil ilovaga ega!
         </p>
-        <a href="#" class="btn btn-warning fw-bold mt-4 px-4 py-2">● ULANISH</a>
       </div>
 
       <!-- O'ng qism: Rasm -->
@@ -149,14 +144,15 @@
       <!-- Chap qism: Katta sarlavha -->
       <div class="col-md-6 mb-4 mb-md-0">
         <h1 class="display-4 fw-semibold">
-          sharoitlar<br>ulanishlar
+         🔗 TMT TAXI’ga ulanish shartlari
         </h1>
       </div>
 
       <!-- O‘ng qism: Tavsif matni -->
       <div class="col-md-6">
         <p class="fs-5">
-          Biz Federal Soliq Xizmatida yakka tartibdagi tadbirkor yoki professional daromad solig‘ini to‘lovchi sifatida ro‘yxatdan o‘tmagan jismoniy shaxslar bilan hamkorlik qila olmaymiz.
+            📋 Ulanishlar bo‘yicha asosiy talab:<br>
+❌ Federal Soliq Xizmatida ro‘yxatdan o‘tmagan (yakka tartibdagi tadbirkor yoki professional daromad solig‘i to‘lovchisi bo‘lmagan) jismoniy shaxslar bilan hamkorlik qila olmaymiz.
         </p>
       </div>
 
@@ -170,30 +166,37 @@
 
       <!-- Chap ustun -->
       <div class="col-md-6 mb-4 mb-md-0">
-        <h3 class="fw-bold mb-4">Haydovchilar uchun talablar</h3>
+        <h3 class="fw-bold mb-4">👤 Haydovchi bo‘lish uchun talablar:</h3>
         <ul class="list-unstyled fs-5">
-          <li class="mb-3"><span class="text-danger">•</span> Yoshi 23 yoshdan, haydovchilik tajribasi 3 yildan</li>
-          <li class="mb-3"><span class="text-danger">•</span> O'zbekiston pasporti yoki O'zbekistonga yashash uchun ruxsatnoma</li>
-          <li class="mb-3"><span class="text-danger">•</span> O'zbekiston yoki O'zbekiston Respublikasi oliy taʼlim muassasasi</li>
-          <li class="mb-3"><span class="text-danger">•</span> Yakka tartibdagi tadbirkor yoki KO‘K maqomi majburiy (biz KO‘K ochishda yordam beramiz)</li>
-          <li class="mb-3"><span class="text-danger">•</span> Ruxsatnomasi (litsenziyasi) bo‘lgan transport vositasi yo‘lovchi taksi reestriga yozuvi bilan. Bu shaxsiy yoki boshqa parkdan ijaraga olingan bo‘lishi mumkin. Bizning buyurtmalarimizga har qanday brend stikeri bo‘lgan transport vositalari ishlashga ruxsat etiladi.</li>
+          <li class="mb-3"><span class="text-danger">•</span>✅ 23 yoshdan katta, kamida 3 yillik haydovchilik tajribasi</li>
+          <li class="mb-3"><span class="text-danger">•</span> ✅ O‘zbekiston fuqarosi yoki O‘zbekistonda yashash uchun ruxsatnoma</li>
+          <li class="mb-3"><span class="text-danger">•</span> ✅ O‘zbekiston fuqarosi yoki O‘zbekiston Respublikasidagi oliy ta’lim muassasasida o‘qiyotgan bo‘lish</li>
+          <li class="mb-3"><span class="text-danger">•</span> ✅ Yakka tartibdagi tadbirkor (YTT) (Biz YTT ochishda yordam beramiz)</li>
         </ul>
-
-        <a href="#" class="btn btn-warning fw-bold mt-4 px-4 py-2">•&nbsp;&nbsp;ULANISH</a>
+        <h3 class="fw-bold mb-4">🚘 Transport vositasi bo‘yicha talablar:</h3>
+        <ul class="list-unstyled fs-5">
+          <li class="mb-3"><span class="text-danger">•</span>✅ Litsenziyasi bo‘lgan, yo‘lovchi tashishga ruxsat etilgan avtomobil</li>
+          <li class="mb-3"><span class="text-danger">•</span> ✅ Mashina shaxsiy yoki boshqa parkdan ijaraga olingan bo‘lishi mumkin</li>
+          <li class="mb-3"><span class="text-danger">•</span> ✅ Avtomobilda boshqa brend stikerlari bo‘lsa ham ishlashingiz mumkin</li>
+        </ul>
+        <a href="https://t.me/Tashmedia_trans" class="btn btn-warning fw-bold mt-4 px-4 py-2">•&nbsp;&nbsp;ULANISH</a>
       </div>
 
       <!-- O‘ng ustun -->
       <div class="col-md-6">
-        <h3 class="fw-bold mb-4">Nima kerak</h3>
+        <h3 class="fw-bold mb-4">📝 Ulanish uchun zarur hujjatlar:</h3>
         <ul class="list-unstyled fs-5">
-          <li class="mb-3"><span class="text-danger">•</span> O'zbekiston yoki O'zbekiston Respublikasi pasporti yoki yashash uchun ruxsatnoma</li>
-          <li class="mb-3"><span class="text-danger">•</span> O'zbekiston yoki O'zbekiston oliy taʼlim muassasasi</li>
-          <li class="mb-3"><span class="text-danger">•</span> STS</li>
-          <li class="mb-3"><span class="text-danger">•</span> Joriy hisob (shaxsiy): Yakka tartibdagi tadbirkor nomidan joriy hisob raqamiga ega bo‘lishi kerak. SMZ haydovchilari uchun mablag‘lar Tinkoff yoki Sberbank orqali yechiladi.</li>
-          <li class="mb-3"><span class="text-danger">•</span> Sudlanganlik yo‘qligi to‘g‘risidagi guvohnoma</li>
-          <li class="mb-3"><span class="text-danger">•</span> Android telefon</li>
+          <li class="mb-3"><span class="text-danger">•</span>📌 O‘zbekiston pasporti yoki yashash uchun ruxsatnoma</li>
+          <li class="mb-3"><span class="text-danger">•</span> 🎓 O‘zbekiston yoki uning oliy o‘quv yurtlarida o‘qiyotganligini tasdiqlovchi hujjat (agar talaba bo‘lsa)</li>
+          <li class="mb-3"><span class="text-danger">•</span> 📄 STS (soliq to‘lovchi sertifikati)</li>
+          <li class="mb-3"><span class="text-danger">•</span> 💳 Yakka tartibdagi tadbirkor nomiga ochilgan joriy hisob raqami
+(SMZ haydovchilari uchun mablag‘lar Tinkoff yoki Sberbank orqali o‘tkaziladi)</li>
+          <li class="mb-3"><span class="text-danger">•</span> 🧾 Sudlanmaganlik haqida guvohnoma</li>
+          <li class="mb-3"><span class="text-danger">•</span> ☎️ Aloqada bo‘lish uchun yaroqli telefon raqami</li>
           <li class="mb-3"><span class="text-danger">•</span> Ish jarayonida siz bilan bog‘lanish uchun yaroqli telefon raqami</li>
         </ul>
+          <h3 class="fw-bold mb-4">📞 TMT TAXI — siz bilan qonuniy, halol va uzoq muddatli hamkorlik tarafdori.
+So‘rov qoldiring — biz siz bilan bog‘lanamiz va hamma bosqichlarda yordam beramiz!</h3>
       </div>
 
     </div>
