--- a/index4.html
+++ b/index4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Taxi Ritm</title>
+  <title>TMT TAXI</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -133,68 +133,110 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light">
-  <div class="container">
-    <a class="navbar-brand fw-bold" href="./base.html">TMT TAXI</a>
-    <div class="ms-auto d-flex align-items-center gap-3">
-      <a href="#" class="btn btn-link">Korporativ taksi</a>
-      <a href="#" class="btn btn-link">Shaxsiy hisob</a>
-      <a href="#" class="btn btn-dark">Taksi buyurtma qiling</a>
+    <div class="container">
+        <a class="navbar-brand font-weight-bold" href="./base.html">TMT TAXI</a>
+        <div class="ml-auto d-flex align-items-center">
+          <a href="tel:+998773105555" class="btn btn-link">☎️ (77 310 55 55)</a>
+          <a href="tel:+998952435555" class="btn btn-link">☎️ (95 243 55 55)</a>
+          <a href="https://taxi.yandex.uz/ru_uz/" class="btn btn-dark">Taksi buyurtma qiling</a>
+        </div>
     </div>
-  </div>
-</nav>
+  </nav>
 <section class="py-5 bg-white">
   <div class="container">
-    <h1 class="display-4 fw-semibold mb-4">Kompaniyaning yaratilish tarixi</h1>
+    <h1 class="display-4 fw-semibold mb-4">🏁 Kompaniyamiz tarixi — TMT TAXI</h1>
 
-    <p class="lead">
-      Bizning taksi kompaniyamiz tarixi 20022 yilda boshlangan. O'shanda ham, 90-yillardagi yovvoyi o'tish davrida ham biz ishonchli hamkor sifatida kompaniyamiz obro'siga tayanishga qaror qilib, o'z yo'limizni tanladik.
-    </p>
+    <p>
+TMT TAXI o‘z faoliyatini 2002-yilda boshlagan. O‘sha davrda, bozor notinch va tartibsiz bo‘lsa-da, biz eng muhim tamoyilga — ishonchlilik va halollik asosida yo‘l tanladik.
 
-    <p class="mt-3">
-      Yillar o'tdi, yo'lovchi tashish bozori jadal rivojlandi. Katta miqdordagi pulga ega bo'lgan "gigantlar" bozorga kirdi va bir necha oy ichida juda ko'p sonli avtomobillarga ega bo'lgan yirik taksi parklari yaratdilar, ular bilan raqobat qilish juda qiyin edi. Ammo bir muncha vaqt o'tgach, bunday kompaniyalar yopildi va sotildi. Gap shundaki, ular darhol foyda olish ilinjida o‘z obro‘-e’tiborini, xodimlarini, ayniqsa, mashinalarini ijaraga olgan haydovchilarni o‘ylamagan. Kompaniyalar yopildi va bizning parkimiz qiyin, ammo tizimli o'sishni davom ettirdi.
-    </p>
+<br><br>🛣️ Bozor yildan-yilga o‘zgarib, katta mablag‘ bilan kirib kelgan yirik taksi kompaniyalari soni ortdi. Ular qisqa fursatda yuzlab avtomobillar bilan bozorda ustunlikka erishdi. Ammo...
+
+<br><br>⛔ Ular tez foyda orqasidan quvib, eng muhim narsani — xodimlar, haydovchilar, va obro‘ haqida unutishdi. Natijada ko‘plab “gigant”lar tezda yo‘qoldi — yopildi yoki sotuvga chiqarildi.
+
+<br><br>✅ Biz esa, o‘z qadriyatlarimizga sodiq qoldik: haydovchilar bilan insoniy munosabat xizmat sifati va xavfsizlikka jiddiy e’tibor tizimli va barqaror o‘sish Bugungi kunda TMT TAXI — bu haydovchilar va mijozlar orasida ishonchli nomga aylangan, o‘z yo‘lini bosib o‘tgan mustahkam brenddir.    </p>
   </div>
 </section>
 <section class="py-5 bg-light">
   <div class="container">
-    <h1 class="display-4 fw-bold mb-4">Bizning muvaffaqiyatimiz siri</h1>
+    <h1 class="display-4 fw-bold mb-4">🏆 Bizning muvaffaqiyatimiz siri — haydovchiga hurmat, ishonch va tizimlilik</h1>
 
-    <p class="lead">
-      Dastlabki 2 yillik ish natijalariga ko'ra, biz Moskvadagi eng yirik taksi parklari qatoridamiz. Va agar siz Moskvaning barcha avtoparklarini yoshi va ishonchliligi bo'yicha baholasangiz, TMT taxida kompaniyasi reytingda birinchi o'rinda turadi, chunki biz 2023 yildan beri "omon qolishga" va munosib ishonchni saqlab qolishga muvaffaq bo'lgan yagonamiz. 2025 yil boshiga kelib, bizning taksi parkimiz tejamkorlik, Comfort va Comfort+ segmentlarida 1800 dan ortiq avtomobillarga ega. Bizda 8 ta motor kolonnasi va Moskvada o'z haydovchilar tayyorlash markazimiz ochilgan.
-    </p>
+    <p class="lead">🟡 TMT TAXI dastlabki 2 yil ichida Moskvadagi eng yirik taksi parklaridan biriga aylandi. 2023-yildan boshlab bozordagi notinchlik va o‘zgarishlarga qaramay, biz barqarorlikni saqlab qolgan kam sonli kompaniyalardan biri bo‘ldik.    </p>
 
     <p class="mt-4">
-      Ishonchli hamkor sifatidagi obro'-e'tiborimiz siri shundaki, biz dastlab haydovchilarga e'tibor qaratganmiz. Bizning asosiy vazifamiz doimo taksi haydovchilari uchun qulay hamkorlikni ta'minlash bo'lib kelgan va shunday bo'lib qoladi. Biz kompaniyaning ichki siyosatini shunday quridikki, barcha xodimlarimizning asosiy vazifasi haydovchiga yordam berishdir. Biz taksi haydovchilarining har qanday muammolarga darhol javob berishga va ularni chaqmoq tezligida hal qilishga harakat qilamiz, bizning qo'llab-quvvatlash xizmatimiz har doim tezkor javob beradi. Bizning taksi parkimiz haydovchilari ish bilan bog'liq har qanday shoshilinch bo'lmagan masalani o'z karvonida mexaniklar bilan hal qilishlari mumkin, ular uchun taksi haydovchilariga yordam berish ustuvor vazifadir.
-    </p>
+    📊 Bugungi kunda — 2025-yil boshida:<br>
+    * 1800 dan ortiq avtomobil — Tejamkor, Comfort, va Comfort+ segmentlarida<br>
+    * 8 ta motor kolonnasi<br>
+    * Moskvada o‘z haydovchilarni tayyorlash markazi    </p><br>
 
-    <p class="mt-4">
-      Bizning munosabatimiz evaziga ko'plab haydovchilar bizga Internetda rahmat aytishadi va bizga ko'plab parklari juda yaxshi ko'radigan narsalarni – ijobiy sharhlarni qoldiradilar, biz ularni juda qadrlaymiz.
+    <p class="mt-4 lead">🤝 Muvaffaqiyat kaliti — haydovchiga e’tibor </p>
+    <p>Bizning eng katta ustunligimiz — haydovchini markazga qo‘ygan siyosatimizda. Bizning ichki tizimimiz shunday qurilganki, barcha xodimlar, menejerlardan tortib, mexaniklargacha, birinchi navbatda haydovchiga yordam berish uchun ishlaydi.
+    <br>🔧 Shoshilinch bo‘lmagan texnik muammolar har bir karvonda joylashgan mexaniklar yordamida hal qilinadi.
+    <br>📞 Qo‘llab-quvvatlash xizmati esa har qanday savolga tezkor va professional javob beradi — biz “haydovchi muammosiz ishlashi kerak” degan tamoyilga amal qilamiz.
+    </p>
+       <p class="mt-4 lead">💬 Ijobiy fikrlar — biz uchun katta qadriyat</p>
+    <p>Ko‘plab haydovchilar biz haqimizda ijtimoiy tarmoqlarda minnatdorchilik bildiradi, sharhlar yozadi, bizni tanlaydi. Biz esa ularning har bir so‘zini qadrlaymiz.
+    <br>🟢 TMT TAXI — bu nafaqat xizmat, balki insoniy yondashuv, hurmat va hamkorlikdir. Biz ishonchni birinchi o‘ringa qo‘yamiz — aynan shu narsa bizni ajratib turadi.
     </p>
   </div>
 </section>
 <section class="py-5">
   <div class="container">
     <!-- Sarlavha -->
-    <h1 class="display-4 fw-bold mb-4">Nima uchun biz bilan ishlash foydali?</h1>
+    <h1 class="display-4 fw-bold mb-4">✅ Nima uchun aynan TMT TAXI?</h1>
 
     <!-- Paragraflar -->
     <p class="lead">
-      Har yili TMT taxi taksi haydovchilari uchun tobora qulay joyga aylanadi. Bizning taksi parkimiz haydovchilar uchun taklif qiladigan asosiy yo'nalish – bu depozitsiz taksi ijarasi. Siz bizning shartlarimizni taksi ijarasining asosiy sahifasida o'qishingiz mumkin.
+        💼 Biz bilan ishlash — foydali, oson va ishonchli!
     </p>
 
     <p class="mt-3">
-      Ammo asosiysi shundaki, bizning taksi kompaniyamiz avtomobil ijarasidan tashqari, hech qanday depozitsiz, dastlabki to‘lovlarsiz va yig‘imlarsiz qiziqarli shartlarda xarid qilish bilan taksi ijarasini taklif qiladi.
+Har yili TMT TAXI yanada ko‘proq haydovchilar uchun qulay va foydali ish maydoniga aylanmoqda. Biz taksi bozorida oddiy ijara emas, balki uzoq muddatli, barqaror hamkorlikni taklif qilamiz.
+    </p>
+      <p class="lead">
+🚘 Depozitsiz avtomobil ijarasi
     </p>
 
+    <p class="mt-3">
+Bizda kafolat puli talab qilinmaydi — siz mashinani to‘g‘ridan-to‘g‘ri ish uchun olib, darhol daromad topishni boshlaysiz!
+    </p>
+          <p class="lead">
+💳 To‘lovlarsiz avtomobil xaridi    </p>
+
+    <p class="mt-3">
+aksi uchun avtomobilni ijarada yurib, keyin foydali shartlar bilan xarid qilish imkoniyati mavjud. Bu jarayon:
+
+❌ Dastlabki to‘lovlarsiz
+
+❌ Yashirin yig‘imlarsiz
+
+❌ Depozitsiz
+
+    </p>
+          <p class="lead">
+🤝 Biznes hamkorlik — ishonch asosida
+    </p>
+
+    <p class="mt-3">
+Agar siz uzoq muddatli va halol ish izlayotgan bo‘lsangiz, TMT TAXI — bu siz uchun ideal tanlov.
+
+📌 Biz sizga:
+
+Qulay shartlar
+
+Halol hisob-kitob
+
+Insoniy munosabat
+
+Doimiy texnik va huquqiy qo‘llab-quvvatlashni taklif qilamiz.
+    </p>
+          <p class="lead">
+🟢 TMT TAXI — sizning kelajagingizga ishonchli yo‘l!
+    </p>
+
+    <p class="mt-3">
+📞 Bugunoq biz bilan bog‘laning va shartlarni o‘zingiz ko‘ring!    </p>
     <!-- Bo'sh joy -->
     <div class="my-5"></div>
-
-    <!-- Biznes taklif -->
-    <h2 class="display-5 fw-bold mb-3">Biznes taklifimiz</h2>
-
-    <p>
-      Agar siz taksida ishlash uchun ishonchli hamkorga qiziqsangiz, bizning taksi xizmatimizga keling. Biz sizlarga qulay hamkorlik qilish uchun shart-sharoitlarni yaratib beramiz, chunki bizning ustuvorligimiz ishonchlilik, kelajakka ishonchimiz siri shu yerda.
-    </p>
   </div>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
