--- a/index5.html
+++ b/index5.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Taxi Ritm</title>
+  <title>TMT TAXI</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -133,25 +133,24 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light">
-  <div class="container">
-    <a class="navbar-brand fw-bold" href="./base.html">TMT TAXI</a>
-    <div class="ms-auto d-flex align-items-center gap-3">
-      <a href="#" class="btn btn-link">Korporativ taksi</a>
-      <a href="#" class="btn btn-link">Shaxsiy hisob</a>
-      <a href="#" class="btn btn-dark">Taksi buyurtma qiling</a>
+    <div class="container">
+        <a class="navbar-brand font-weight-bold" href="./base.html">TMT TAXI</a>
+        <div class="ml-auto d-flex align-items-center">
+          <a href="tel:+998773105555" class="btn btn-link">☎️ (77 310 55 55)</a>
+          <a href="tel:+998952435555" class="btn btn-link">☎️ (95 243 55 55)</a>
+          <a href="https://taxi.yandex.uz/ru_uz/" class="btn btn-dark">Taksi buyurtma qiling</a>
+        </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
 <!-- Hero section -->
 <div class="hero-section">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <h1 class="display-4 fw-bold">siz uchun taksi siznikini ham; siznikichi xodimlar</h1>
-        <p class="fs-5 mt-3">O'zbekiston va mintaqalar bo'ylab qulay sayohatlar<br>
-            Raqobatbardosh narxlar va moslashuvchan tariflar<br>
-            Hisob-kitoblarni to'lashdan keyin</p>
+        <h1 class="display-4 fw-bold">🚖 Siz uchun — TMT TAXI</h1>
+        <p class="fs-5 mt-3">Siz uchun taksi. Siznikini ham, siznikichi xodimlar uchun ham!
+            Biz sizning va jamoangizning kundalik harakatlanishini oson, qulay va ishonchli qilamiz.</p>
       </div>
       <div class="col-md-6">
         <img src="photo_taxi.jpg" alt="Taxi" class="img-fluid rounded">
@@ -162,7 +161,7 @@
 
 <section class="py-5 bg-light">
   <div class="container">
-    <h2 class="display-5 fw-bold mb-4">Olasiz</h2>
+    <h2 class="display-5 fw-bold mb-4">📲 Sizga kerak bo‘lgan barcha xizmatlar — bir joyda!</h2>
 
     <div id="servicesCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -174,8 +173,8 @@
               <div class="card h-100 border-0">
                 <div class="card-body">
                   <img src="get1.svg" alt="Manager" width="40">
-                  <h5 class="mt-3">Shaxsiy menejer</h5>
-                  <p class="text-muted">Murakkab va nostandart tashishlarni tashkil etishda yordam berish</p>
+                  <h5 class="mt-3">🚕 Mobil ilova – TMT TAXI ilovasi</h5>
+                  <p class="text-muted">Taksini bir necha soniyada chaqiring yoki oldindan rejalashtiring!</p>
                 </div>
               </div>
             </div>
@@ -183,8 +182,17 @@
               <div class="card h-100 border-0">
                 <div class="card-body">
                   <img src="get2.svg" alt="Airport" width="40">
-                  <h5 class="mt-3">Aeroportda uchrashuv</h5>
-                  <p class="text-muted">Logotip bilan kutib olish, mehmonlarga qulaylik yaratish</p>
+                  <h5 class="mt-3">📦 Kuryer yetkazib berish xizmati</h5>
+                  <p class="text-muted">TMT TAXI nafaqat yo‘lovchi, balki yuk ham tashiydi!</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card h-100 border-0">
+                <div class="card-body">
+                  <img src="get2.svg" alt="Airport" width="40">
+                  <h5 class="mt-3">📦 Kuryer yetkazib berish xizmati</h5>
+                  <p class="text-muted">TMT TAXI nafaqat yo‘lovchi, balki yuk ham tashiydi!</p>
                 </div>
               </div>
             </div>
@@ -192,8 +200,8 @@
               <div class="card h-100 border-0">
                 <div class="card-body">
                   <img src="get3.svg" alt="Driver with car" width="40">
-                  <h5 class="mt-3">Haydovchi bilan ijaraga</h5>
-                  <p class="text-muted">Kun bo‘yi xizmat ko‘rsatadigan avtomobillar</p>
+                  <h5 class="mt-3">👤 Shaxsiy menejer</h5>
+                  <p class="text-muted">Murakkab, nostandart yoki maxsus tashish kerakmi?</p>
                 </div>
               </div>
             </div>
@@ -207,8 +215,8 @@
               <div class="card h-100 border-0">
                 <div class="card-body">
                   <img src="get4.svg" alt="Mobile app" width="40">
-                  <h5 class="mt-3">Mobil ilova</h5>
-                  <p class="text-muted">Tezda taksiga buyurtma berish yoki oldindan rejalashtirish imkoniyati</p>
+                  <h5 class="mt-3">✈️ Aeroportda kutib olish</h5>
+                  <p class="text-muted">TMT TAXI — aeroport xizmatlarida yuqori daraja va ishonchli xizmat.</p>
                 </div>
               </div>
             </div>
@@ -216,8 +224,8 @@
               <div class="card h-100 border-0">
                 <div class="card-body">
                   <img src="get5.svg" alt="Courier" width="40">
-                  <h5 class="mt-3">Kuryer yetkazib berish</h5>
-                  <p class="text-muted">Hujjatlar, moddiy boyliklar va sovg‘alarni yetkazib berish xizmati</p>
+                  <h5 class="mt-3">🚘 Haydovchi bilan avtomobil ijarasi</h5>
+                  <p class="text-muted">Biz sizga professional haydovchi bilan avtomobil taqdim etamiz — kun davomida xizmat ko‘rsatadi, xohlagan joyga olib boradi, kutadi va yordam beradi.</p>
                 </div>
               </div>
             </div>
@@ -239,7 +247,7 @@
   <div class="container">
     <div class="row mb-5">
       <div class="col-md-8">
-        <h2 class="display-4 fw-bold">Professional haydovchilar jamoasi</h2>
+        <h2 class="display-4 fw-bold">👨‍✈️ Professional haydovchilar jamoasi — TMT TAXI faxri</h2>
       </div>
     </div>
 
@@ -252,7 +260,7 @@
         </div>
         <hr>
         <h5 class="fw-bold">Qattiq tanlov</h5>
-        <p class="text-muted">Haydovchilar qat'iy tanlovdan o'tgan va rus haydovchilik guvohnomalariga ega.</p>
+        <p class="text-muted">Har bir haydovchi qat’iy tanlov asosida ishga olinadi. Ular amaldagi haydovchilik guvohnomasiga ega va tajribali mutaxassislardir.</p>
       </div>
 
       <!-- 2 -->
@@ -262,8 +270,8 @@
           <small class="text-muted">02</small>
         </div>
         <hr>
-        <h5 class="fw-bold">Haydovchilarni tibbiy ko‘rikdan o‘tkazish</h5>
-        <p class="text-muted">Haydovchilar har kuni shifokor tomonidan tibbiy ko‘rikdan o‘tkaziladi.</p>
+        <h5 class="fw-bold">Tibbiy ko‘rik</h5>
+        <p class="text-muted">Haydovchilar har kuni tibbiy nazoratdan o‘tadi. Bu sizning xavfsizligingiz uchun eng muhim talablarimizdan biridir.</p>
       </div>
 
       <!-- 3 -->
@@ -273,8 +281,12 @@
           <small class="text-muted">03</small>
         </div>
         <hr>
-        <h5 class="fw-bold">Haydovchi tayyorlash</h5>
-        <p class="text-muted">Muntazam ravishda ixtisoslashtirilgan tayyorgarlik va qayta tayyorlash.</p>
+        <h5 class="fw-bold">Doimiy tayyorgarlik</h5>
+        <p class="text-muted">Haydovchilarimiz muntazam ravishda:<br>
+
+* malaka oshirish kurslarida qatnashadi,<br>
+
+* xizmat sifati va madaniyatini oshirish bo‘yicha qayta tayyorlanadi.</p>
       </div>
 
       <!-- 4 -->
@@ -284,8 +296,13 @@
           <small class="text-muted">04</small>
         </div>
         <hr>
-        <h5 class="fw-bold">Avtomobillarni tekshirish</h5>
-        <p class="text-muted">Avtomobillar har kuni texnik ko‘rikdan o‘tkaziladi.</p>
+        <h5 class="fw-bold">Texnik nazorat</h5>
+        <p class="text-muted">Avtomobillar har kuni:<br>
+
+* texnik ko‘rikdan o‘tkaziladi,<br>
+
+* barcha muhim tizimlar tekshiriladi,<br>
+            * faqat to‘liq soz holatda yo‘lga chiqishlariga ruxsat beriladi.</p>
       </div>
     </div>
   </div>
